--- a/views/onePokemon.ejs
+++ b/views/onePokemon.ejs
@@ -21,5 +21,10 @@
             <li><%=move%></li>
         <%})%>
     </ul>
+
+    <!-- DELETE BUTTON vvv -->
+    <form action="/api/pokemon/deletePokemon/<%=pokemon.Name%>?_method=DELETE" method="post">
+        <input type="submit" name="_method" value="DELETE THIS POKEMON">
+    </form>
 </body>
 </html>
