Update Pokemon front end page

--- a/views/createPokemon.ejs
+++ b/views/createPokemon.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%- include("./partials/head") %>
 <body>
-    <h1>Fille out this form to create a new Pokemon</h1>
+    <h1>Fill out this form to create a new Pokemon</h1>
     <br>
 
     <form action="/api/pokemon/createPokemon" method="post">
