Added individual trainer front end view

--- a/views/allPokemon.ejs
+++ b/views/allPokemon.ejs
@@ -3,7 +3,9 @@
     <%- include("./partials/head") %>
 <body>
     <h1>~ALL POKEMON~</h1>
-    <a href="/pokemon"><h2>HOME</h2></a>
+    <a href="/"><h2>HOME</h2></a>
+    <br>
+    <a href="/createPokemon">Create a new Pokemon</a>
     <br>
 
     <% pokemon.forEach((mon)=>{ %>
