--- a/views/oneTrainer.ejs
+++ b/views/oneTrainer.ejs
@@ -8,7 +8,9 @@
 
 
     <h2>Name: <%=trainer.Name%></h2>
-    <h2>Hometown: <%=trainer.HomeTown%></h2>
+    <h3>Hometown: <%=trainer.HomeTown%></h2>
+
+    <!-- List of captured Pokemon -->
 
 </body>
 </html>
